--- a/client/app/cats/cats.component.html
+++ b/client/app/cats/cats.component.html
@@ -14,7 +14,7 @@
           <th scope="col">Actions</th>
         </tr>
       </thead>
-      <tbody >
+      <tbody>
         <tr>
           <td colspan="4">There are no cats in the DB. Add a new cat below.</td>
         </tr>
@@ -24,7 +24,7 @@
           <td>{{cat.name}}</td>
           <td>{{cat.age}}</td>
           <td>{{cat.weight}}</td>
-       
+
           <td>
             <button class="btn btn-sm btn-primary" (click)="enableEditing(cat)">
               <i class="fa fa-pencil"></i> Edit
@@ -38,36 +38,12 @@
       <tbody *ngIf="isEditing">
         <tr>
           <td colspan="4">
-            <form [formGroup]="editCatForm" (ngSubmit)="editCat()">
-              <div class="row row-cols-1 row-cols-sm-auto g-2">
-                <div class="col">
-                  <input class="form-control" type="text" name="name"
-                    formControlName="name" placeholder="Name">
-                </div>
-                <div class="col">
-                  <input class="form-control" type="number" name="age"
-                    formControlName="age" placeholder="Age" min="0">
-                </div>
-                <div class="col">
-                  <input class="form-control" type="number" name="weight" 
-                    formControlName="weight" placeholder="Weight" step="any" min="0">
-                </div>
-              
-                <div class="col">
-                  <button class="btn btn-primary" type="submit" [disabled]="!editCatForm.valid">
-                    <i class="fa fa-plus"></i> Add
-                  </button>
-                  <button class="btn btn-sm btn-warning" (click)="cancelEditing()">
-                    <i class="fa fa-times"></i> Cancel
-                  </button>
-                </div>
-              </div>
-            </form>
+            <button (click)="cancelEditing()">Cancel</button>
+            <app-dynamic-form [questions]="questions$ | async" (operation)="editCat($event)"></app-dynamic-form>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
-  <app-add-cat-form  [cats$?]="cats$ | async"></app-add-cat-form>
+  <app-dynamic-form *ngIf="!isEditing" [questions]="questions$ | async" (operation)="addCat($event)" ></app-dynamic-form>  
 </div>
-
